--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
 # This is a basic workflow to help you get started with Actions
-name: CI-Basic
+name: CI
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on: [push, pull_request, workflow_dispatch]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+  # Prepare the workspace.
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -15,7 +15,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      
+
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.5
         with:
@@ -23,14 +23,29 @@ jobs:
 
       - name: Install yarn
         run: npm i -g yarn typescript snowpack
-        
+
       - name: Install Packages
         run: yarn
-        
+
       - name: run typescript
         run: tsc
-      
+
+
+  snowpack:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
       - name: Run snowpack
         run: |
-          cd testFixture/
+          cd {{$GITHUB_WORKSPACE}}/test/valid/
           snowpack build
+
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Run tests
+        run: yarn test
