--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Setup & Build
         run: |
-          chmod CI.sh
+          chmod -v 777 CI.sh
           ./CI.sh
 
 
@@ -42,7 +42,7 @@ jobs:
 
       - name: Setup & Build
         run: |
-          chmod CI.sh
+          chmod -v 777 CI.sh
           ./CI.sh
 
       - name: Run snowpack
@@ -66,7 +66,7 @@ jobs:
 
       - name: Setup & Build
         run: |
-          chmod CI.sh
+          chmod -v 777 CI.sh
           ./CI.sh
 
       - name: Run tests
